fix: gallery popup on ios device

--- a/packages/atlas/src/themesource/atlas_core/web/core/widgets/_input.scss
+++ b/packages/atlas/src/themesource/atlas_core/web/core/widgets/_input.scss
@@ -238,7 +238,8 @@
 
     // Targets only webkit iOS devices
     .dj_webkit.dj_ios .form-control {
-        transform: translateZ(0);
+        transform: translate3d(0,0,0);
+        -webkit-transform: translate3d(0,0,0);
     }
 
     @media only screen and (min-width: $screen-md) {
